Рефакторинг спецификаций OpenApi и использующих их сервисов
